Updated meta description and privacy text

--- a/web/index.html
+++ b/web/index.html
@@ -14,8 +14,8 @@
     <![endif]-->
     <link rel="icon" href="ninja16.png" type="image/png" sizes="16x16">
     <link rel="icon" href="ninja80.png" type="image/png" sizes="80x80">
-    <meta name="description" content="Quick and realtime share text between computers or mobile devices without the need for a account.">
-    <meta name="keywords" content="clipboard, online, realtime, virtual, sharing, computer, mobile, exchange, copy, paste, transfer">
+    <meta name="description" content="Realtime clipboard to easily and secure share text between computers or mobile devices">
+    <meta name="keywords" content="clipboard, online, realtime, virtual, sharing, computer, mobile, exchange, copy, paste, transfer, secure">
     <meta name="author" content="Tim de Pater - TrafeX.nl">
 
 </head>
@@ -44,15 +44,16 @@
                     <li>Open this website on both devices</li>
                     <li>Enter the sender ID on the receiving device and press connect</li>
                     <li>Type or paste the text you want to send on the sending device</li>
-                    <li>See the text appear on the receiving device after pressing 'send'</li>
+                    <li>See the text immediately appear on the receiving device after pressing 'send'</li>
                 </ol>
             </div>
             <div class="tab-pane fade" id="privacy">
                 <h4>Privacy & security</h4>
+                The following precautions are taken to make sure sensitive information can safely be sent using this website.
                 <ul>
-                    <li>The data send/received via this website is not stored on the server</li>
-                    <li>The data send/received via this website is only visible for the receiver with the correct sender ID</li>
-                    <li>The connection to the server is encrypted with SSL</li>
+                    <li>The website is running on HTTPS which means the connection to and from the server is <strong>encrypted</strong>.</li>
+                    <li>Data send and received via the website is <strong>never stored or visible on the server</strong>.</li>
+                    <li>You need to be connected to the sender at the moment data is send, <strong>it's not possible to retrieve the data afterwards.</strong></li>
                 </ul>
             </div>
         </div>
