--- a/web/index.html
+++ b/web/index.html
@@ -65,7 +65,7 @@
             <div class="col-sm-6">
             <div class="panel panel-primary">
                 <div class="panel-heading">
-                    <h3 class="panel-title">Send</h3>
+                    <h3 id="send-header" class="panel-title">Send</h3>
                 </div>
                 <div class="panel-body">
                     <h4>Sender ID: <strong><span id="roomid">[connecting..]</span></strong></h4>
@@ -118,6 +118,8 @@
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script>
         var socket = io();
+        var nrReceivers = 0;
+
         // Listeners
         $('#msg').submit(function(){
             var msg = $('#text').val();
@@ -144,8 +146,20 @@
             $('#subscribed-room').text('Received text from sender ID ' + roomId);
         });
         socket.on('subscribed-listener', function(fromRoom){
-            $('#announce').text('A receiver connected.');
+            nrReceivers++;
+            $('#announce').text('A receiver connected');
             $('#announce').slideDown().delay(2000).slideUp();
+            setSendHeader();
+        });
+        socket.on('receiver-disconnected', function(){
+            nrReceivers--;
+            $('#announce').text('A receiver disconnected.');
+            $('#announce').slideDown().delay(2000).slideUp();
+            setSendHeader();
+        });
+        socket.on('sender-disconnected', function(){
+            $('#global-alert').text('The sender disconnected.');
+            $('#global-alert').slideDown().delay(5000).slideUp();
         });
 
         // Connection handling
@@ -169,6 +183,16 @@
             $('#global-alert').text(errorMsg);
             $('#global-alert').slideDown();
         });
+
+        function setSendHeader() {
+            var msg = 'Send to ' + nrReceivers;
+            if (1 == nrReceivers) {
+                msg += ' receiver';
+            } else {
+                msg += ' receivers';
+            }
+            $('#send-header').text(msg);
+        }
 
         function nl2br(text) {
             var htmls = [];
